--- a/index.html
+++ b/index.html
@@ -1,229 +1,228 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Painel de Monitoramento - Sede TJ-GO (RBIM CONSULTORIA)</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <style>
-    body {
-      margin: 0;
-      font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
-      overflow-x: hidden;
-    }
-    .container {
-      display: flex;
-      flex-direction: row;
-      height: 100vh;
-    }
-    .left {
-      flex: 3;
-      background: #000;
-    }
-    .right {
-      flex: 2;
-      background: #121212;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 10px;
-      overflow-y: auto;
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-    .logos {
-      width: 100%;
-      display: flex;
-      justify-content: flex-end;
-      gap: 10px;
-      margin-bottom: 5px;
-    }
-    .logos img {
-      height: 40px;
-    }
-    h2 {
-      text-align: center;
-      font-size: 18px;
-      margin-bottom: 10px;
-    }
-    .gauge-container {
-      width: 90%;
-      background: #1e1e1e;
-      padding: 10px;
-      border-radius: 12px;
-      margin: 10px 0;
-    }
-    #infoText {
-      text-align: center;
-      font-size: 14px;
-      margin-top: 10px;
-    }
-    .alert {
-      animation: blink 1s infinite;
-    }
-    @keyframes blink {
-      0%, 100% { background-color: #1e1e1e; }
-      50% { background-color: #8b0000; }
-    }
-    #alertButton {
-      background-color: #ff4500;
-      color: white;
-      padding: 8px 16px;
-      margin: 5px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    @media (max-width: 768px) {
-      .container {
-        flex-direction: column;
-      }
-      .left, .right {
-        flex: none;
-        width: 100%;
-        height: auto;
-      }
-      .logos {
-        justify-content: center;
-      }
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Painel de Monitoramento Climático - TJ-GO (RBIM)</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #121212;
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+        }
+        .topbar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+        }
+        .logos img {
+            height: 40px;
+            margin-left: 10px;
+        }
+        .container {
+            display: flex;
+            flex: 1;
+            overflow: hidden;
+        }
+        .left, .right {
+            flex: 1;
+            padding: 10px;
+            overflow: auto;
+        }
+        iframe {
+            width: 100%;
+            height: 300px;
+            border: none;
+            border-radius: 10px;
+        }
+        .expandir-btn, .alert-btn {
+            margin-top: 10px;
+            padding: 10px 20px;
+            background-color: #FF4500;
+            border: none;
+            color: #fff;
+            border-radius: 5px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+        .dashboard {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-top: 20px;
+            justify-content: center;
+        }
+        .card, .box {
+            background-color: #1e1e1e;
+            border-radius: 10px;
+            padding: 20px;
+            text-align: center;
+            flex: 1 1 250px;
+        }
+        @media (min-width: 768px) {
+            .container {
+                flex-direction: row;
+            }
+            iframe {
+                height: 100%;
+            }
+        }
+        @media (max-width: 767px) {
+            .container {
+                flex-direction: column;
+            }
+        }
+    </style>
 </head>
-
 <body>
-  <div class="container">
-    <div class="left">
-      <iframe src="https://my.matterport.com/show/?m=5HGzJf9o6Ae&play=1" allow="fullscreen; vr; accelerometer; gyroscope; magnetometer; xr-spatial-tracking;"></iframe>
-    </div>
-    <div class="right">
-      <div class="logos">
+
+<div class="topbar">
+    <h3>Painel de Monitoramento Climático - TJ-GO (RBIM CONSULTORIA)</h3>
+    <div class="logos">
         <img src="logorbim.png" alt="Logo RBIM">
-        <img src="logotjgo.png" alt="Logo TJGO">
-      </div>
-      <h2>Painel de Monitoramento - Sede TJ-GO (RBIM CONSULTORIA)</h2>
-      <button id="alertButton" onclick="enableAlert()">Ativar Alerta Sonoro</button>
-
-      <div id="tempGauge" class="gauge-container">
-        <canvas id="tempChart"></canvas>
-      </div>
-
-      <div id="humGauge" class="gauge-container">
-        <canvas id="humChart"></canvas>
-      </div>
-
-      <div id="infoText">
-        <strong>Monitoramento em tempo real</strong><br>
-        🔵 Azul: Umidade Atual | 🔴 Vermelho: Temperatura Atual<br>
-        🚨 Alerta visual e sonoro acima de 28°C
-      </div>
+        <img src="logotjgo.png" alt="Logo TJ-GO">
     </div>
-  </div>
+</div>
 
-  <audio id="alertAudio" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg" preload="auto"></audio>
+<div class="container">
+    <div class="left">
+        <iframe id="matterport" src="https://my.matterport.com/show/?m=5HGzJf9o6Ae&play=1" allowfullscreen></iframe>
+        <button class="expandir-btn" onclick="expandTour()">🔎 Expandir Tour</button>
+    </div>
 
-  <script>
-    let tempChart, humChart;
-    const ctxTemp = document.getElementById('tempChart').getContext('2d');
-    const ctxHum = document.getElementById('humChart').getContext('2d');
-    const alertAudio = document.getElementById('alertAudio');
-    let alertEnabled = false;
+    <div class="right">
+        <button class="alert-btn" onclick="enableAlert()">Ativar Alerta Sonoro</button>
+        <div class="dashboard">
+            <div class="card">
+                <h2 id="tempAtual">-- °C</h2>
+                <canvas id="gaugeTemp"></canvas>
+            </div>
+            <div class="card">
+                <h2 id="umidadeAtual">-- %</h2>
+                <canvas id="gaugeUmidade"></canvas>
+            </div>
+            <div class="card">
+                <h2 id="ventoAtual">-- m/s</h2>
+                <canvas id="gaugeVento"></canvas>
+            </div>
+            <div class="box">
+                <h3>Sensação Térmica</h3>
+                <p id="feelsLike">-- °C</p>
+            </div>
+            <div class="box">
+                <h3>Pressão</h3>
+                <p id="pressaoAtual">-- hPa</p>
+            </div>
+            <div class="box">
+                <h3>Condições</h3>
+                <p id="descricaoTempo">--</p>
+            </div>
+        </div>
+    </div>
+</div>
 
-    function enableAlert() {
-      alertAudio.play();
-      alertEnabled = true;
-      alertAudio.pause();
-      alertAudio.currentTime = 0;
-      document.getElementById('alertButton').style.display = 'none';
-    }
+<audio id="alertSound" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg"></audio>
 
-    tempChart = new Chart(ctxTemp, {
-      type: 'doughnut',
-      data: {
-        labels: ['Temperatura'],
+<script>
+const apiKey = "d9da98b3560b007a19706897feaa7416";
+let alertEnabled = false;
+
+function expandTour() {
+    const iframe = document.getElementById('matterport');
+    iframe.style.height = "100vh";
+}
+
+function enableAlert() {
+    alertEnabled = true;
+    alert('✅ Alerta sonoro ativado!');
+}
+
+const tempGauge = new Chart(document.getElementById('gaugeTemp'), {
+    type: 'doughnut',
+    data: {
         datasets: [{
-          label: 'Temperatura (°C)',
-          data: [0, 100],
-          backgroundColor: ['#FF4500', '#333'],
-          borderWidth: 2,
-          circumference: 180,
-          rotation: 270
+            data: [0, 50],
+            backgroundColor: ['#FF4500', '#333'],
+            borderWidth: 2
         }]
-      },
-      options: {
-        cutout: '70%',
-        plugins: {
-          tooltip: {enabled: false},
-          legend: {display: false},
-          title: {
-            display: true,
-            text: '--°C',
-            color: '#fff',
-            font: {size: 18}
-          }
-        }
-      }
-    });
+    },
+    options: {rotation: -90, circumference: 180, cutout: '70%', plugins: {legend: {display: false}}}
+});
 
-    humChart = new Chart(ctxHum, {
-      type: 'doughnut',
-      data: {
-        labels: ['Umidade'],
+const umidadeGauge = new Chart(document.getElementById('gaugeUmidade'), {
+    type: 'doughnut',
+    data: {
         datasets: [{
-          label: 'Umidade (%)',
-          data: [0, 100],
-          backgroundColor: ['#1E90FF', '#333'],
-          borderWidth: 2,
-          circumference: 180,
-          rotation: 270
+            data: [0, 100],
+            backgroundColor: ['#00BFFF', '#333'],
+            borderWidth: 2
         }]
-      },
-      options: {
-        cutout: '70%',
-        plugins: {
-          tooltip: {enabled: false},
-          legend: {display: false},
-          title: {
-            display: true,
-            text: '--%',
-            color: '#fff',
-            font: {size: 18}
-          }
-        }
-      }
-    });
+    },
+    options: {rotation: -90, circumference: 180, cutout: '70%', plugins: {legend: {display: false}}}
+});
 
-    function fetchData() {
-      fetch('https://api.openweathermap.org/data/2.5/weather?q=Goiania,BR&units=metric&appid=d9da98b3560b007a19706897feaa7416')
-      .then(response => response.json())
-      .then(data => {
+const ventoGauge = new Chart(document.getElementById('gaugeVento'), {
+    type: 'doughnut',
+    data: {
+        datasets: [{
+            data: [0, 30],
+            backgroundColor: ['#00FF7F', '#333'],
+            borderWidth: 2
+        }]
+    },
+    options: {rotation: -90, circumference: 180, cutout: '70%', plugins: {legend: {display: false}}}
+});
+
+async function updateWeather() {
+    try {
+        const response = await fetch(`https://api.openweathermap.org/data/2.5/weather?q=Goiania,BR&appid=${apiKey}&units=metric`);
+        const data = await response.json();
+        
         const temp = data.main.temp;
-        const hum = data.main.humidity;
+        const humidity = data.main.humidity;
+        const vento = data.wind.speed;
+        const feels_like = data.main.feels_like;
+        const pressao = data.main.pressure;
+        const descricao = data.weather[0].description;
 
-        tempChart.data.datasets[0].data = [temp, 100 - temp];
-        tempChart.options.plugins.title.text = temp.toFixed(1) + '°C';
-        tempChart.update();
+        document.getElementById('tempAtual').textContent = `${temp.toFixed(1)}°C`;
+        document.getElementById('umidadeAtual').textContent = `${humidity}%`;
+        document.getElementById('ventoAtual').textContent = `${vento.toFixed(1)} m/s`;
+        document.getElementById('feelsLike').textContent = `${feels_like.toFixed(1)}°C`;
+        document.getElementById('pressaoAtual').textContent = `${pressao} hPa`;
+        document.getElementById('descricaoTempo').textContent = descricao.charAt(0).toUpperCase() + descricao.slice(1);
 
-        humChart.data.datasets[0].data = [hum, 100 - hum];
-        humChart.options.plugins.title.text = hum + '%';
-        humChart.update();
+        tempGauge.data.datasets[0].data = [temp, 50 - temp];
+        tempGauge.update();
+
+        umidadeGauge.data.datasets[0].data = [humidity, 100 - humidity];
+        umidadeGauge.update();
+
+        ventoGauge.data.datasets[0].data = [vento, 30 - vento];
+        ventoGauge.update();
 
         if (alertEnabled && temp >= 28) {
-          alertAudio.play();
-          document.getElementById('tempGauge').classList.add('alert');
+            document.getElementById('alertSound').play();
+            document.body.style.backgroundColor = "#8B0000";
         } else {
-          document.getElementById('tempGauge').classList.remove('alert');
+            document.body.style.backgroundColor = "#121212";
         }
-      });
-    }
 
-    setInterval(fetchData, 30000); // Atualiza a cada 30 segundos
-    fetchData(); // Primeira chamada
-  </script>
+    } catch (error) {
+        console.error("Erro ao obter dados da API:", error);
+    }
+}
+
+setInterval(updateWeather, 5000);
+updateWeather();
+</script>
+
 </body>
 </html>
 
